--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
+    "google-maps-react": "^2.0.2",
     "material-ui-search-bar": "^1.0.0-beta.12",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
