--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
-    "google-maps-react": "^2.0.2",
     "material-ui-search-bar": "^1.0.0-beta.12",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
+    "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
