--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  — "8"
+  - "8.12.0"
 install:
-  — yarn global install firebase-tools
+  - yarn global install firebase-tools
 jobs:
   include:
     - stage: deploy
