--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
-
-install:
-  - yarn global install firebase-tools
+sudo: true
+install: yarn global install firebase-tools
 jobs:
   include:
     - stage: deploy
