--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 sudo: true
-install: yarn global install firebase-tools
+install: yarn global add firebase-tools
 jobs:
   include:
     - stage: deploy
