--- a/firebase.json
+++ b/firebase.json
@@ -13,6 +13,10 @@
     {
       "source": "/insert",
       "function": "insert"
+    },
+    {
+      "source": "/delete",
+      "function": "delete"
     }]
   }
 }
